remove automatic center

--- a/ui/v2.1.0.2/VNMWheelConfig.ini
+++ b/ui/v2.1.0.2/VNMWheelConfig.ini
@@ -3,6 +3,9 @@ Check4Updates=1
 AnimatedWheel=1
 
 [Profiles]
-ActiveProfile=3
-Name3=test
+ActiveProfile=0
+
+[UserProfiles]
+Name0=User 1
+Total=1
 
